<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:src="@drawable/nro" />

    <TextView
        android:id="@+id/txtPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tvPeso"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/skbPeso"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:max="300" />

    <TextView
        android:id="@+id/txtAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tvAltura"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/skbAltura"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:max="250"
        android:progress="0" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btnCalcular"
        android:textSize="18sp"
        android:padding="10dp"/>

</LinearLayout>